# swagger/secrets-7.2-preview.json
@@ -104,6 +104,42 @@
           }
         },
         "x-ms-examples": {}
+      },
+      "get": {
+        "tags": [
+          "Secrets"
+        ],
+        "operationId": "GetSecretLatestVersion",
+        "summary": "Get the latest version of a specified secret from a given key vault.",
+        "description": "The GET operation is applicable to any secret stored in Azure Key Vault. This operation requires the secrets/get permission.",
+        "parameters": [
+          {
+            "name": "secret-name",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "^[0-9a-zA-Z-]+$",
+            "description": "The name of the secret."
+          },
+          {
+            "$ref": "#/parameters/ApiVersionParameter"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A secret bundle containing the result of the set secret request.",
+            "schema": {
+              "$ref": "#/definitions/SecretBundle"
+            }
+          },
+          "default": {
+            "description": "Key Vault error response describing why the operation failed.",
+            "schema": {
+              "$ref": "common-7.2-preview.json#/definitions/KeyVaultError"
+            }
+          }
+        },
+        "x-ms-examples": {}
       }
     },
     "/secrets/{secret-name}/{secret-version}": {
@@ -183,7 +219,7 @@
             "required": true,
             "pattern": "^[a-f0-9]{32}$",
             "type": "string",
-            "description": "The version of the secret. This URI fragment is optional. If not specified, the latest version of the secret is returned."
+            "description": "The version of the secret."
           },
           {
             "$ref": "#/parameters/ApiVersionParameter"
